@@ -24,9 +24,9 @@ else
 fi
 
 if test "$enable_video" = "yes"; then
-    CONFIGURABLE_FEATURE_DEFINES="$CONFIGURABLE_FEATURE_DEFINES ENABLE_VIDEO=1"
+    CONFIGURABLE_FEATURE_DEFINES="$CONFIGURABLE_FEATURE_DEFINES ENABLE_VIDEO=1 ENABLE_VIDEO_TRACK=1"
 else
-    CONFIGURABLE_FEATURE_DEFINES="$CONFIGURABLE_FEATURE_DEFINES ENABLE_VIDEO=0"
+    CONFIGURABLE_FEATURE_DEFINES="$CONFIGURABLE_FEATURE_DEFINES ENABLE_VIDEO=0 ENABLE_VIDEO_TRACK=0"
 fi
 
 if test "$enable_css_filters" = "yes"; then
@@ -171,7 +171,6 @@ $srcdir/Tools/gtk/generate-feature-defines-files $CONFIGURABLE_FEATURE_DEFINES \
     ENABLE_TOUCH_ICON_LOADING=0 \
     ENABLE_USER_TIMING=0 \
     ENABLE_VIBRATION=0 \
-    ENABLE_VIDEO_TRACK=1 \
     ENABLE_VIEW_MODE_CSS_MEDIA=1 \
     ENABLE_WEB_SOCKETS=1 \
     ENABLE_WEB_TIMING=1 \
