@@ -1,3 +1,12 @@
+2014-10-22  Michael Weber  <xmw@gentoo.org>
+
+        [GTK][Stable] webkitgtk-2.4.6: fails to build with --disable-video
+        https://bugs.webkit.org/show_bug.cgi?id=137445
+
+        Reviewed by Carlos Garcia Campos.
+
+        * Source/autotools/SetupWebKitFeatures.m4:
+
 2014-07-11  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [GTK] Enable VIDEO_TRACK by default
